# Flake-Templates

./: flake.nix
Coq/: CoqMakefile.conf  README.md  flake.nix
Haskell/cabal2nix/: README.md  flake.nix
OCaml/: README.md  flake.nix  init.sh
Python3/poetry2nix/: README.md  flake.nix  pyproject.toml
cpp/: CMakeLists.txt  README.md  flake.nix
cpp/libhello/: CMakeLists.txt  hello.cpp  main.cpp
